# neural_network

./: CMakeLists.txt  рабочий_пример_(не_мой).py
include/: network.h  print_network.h  train.h
src/: activation.c  derivative.c  loss.c  network.c  print_network.c  train.c
tests/test1/: CMakeLists.txt  main.c
